--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="Chat" />
     <string name="utm_psm">UTM PSM</string>
     <string name="type_a_message">Type A Message</string>
+    <string name="welcome_to_utm_smart_navigation">Welcome To UTM Smart Navigation</string>
 </resources>
